# HomeWork_30.1

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  wait-for-db.sh
.github/workflows/: ci.yml
config/: celery.py  permissions.py  settings.py  urls.py
courses/: models.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_course_owner.py  0002_initial.py
materials/: models.py  serializers.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_initial.py  0002_lesson_owner.py
nginx/: Dockerfile  nginx.conf
users/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: peyments.json
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_user_managers_subscription.py  0004_payments_link_pay_payments_session_id_and_more.py
users/template/emails/: course_updated.html
