[tool.poetry]
name = "homework-30-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "homework_30"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
django-filter = "^25.1"
celery = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
